docu update, bug-fixes
